# fcl

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  CTestConfig.cmake  CTestCustom.cmake.in  INSTALL  LICENSE  Omni.Fcl.Static.vcxproj  README.md  config.h  fcl-config.cmake.in  fcl.pc.in  fcl.vcxproj  fcl.vcxproj.filters  package.xml  packages.config  stdafx.cpp
examples/: CMakeLists.txt  demo_libccdindp.cpp  test_fcl_utility.h
include/fcl/: CMakeLists.txt  collision.h  collision_data.h  collision_func_matrix.h  collision_geometry.h  collision_node.h  collision_object.h  config.h.in  continuous_collision.h  continuous_collision_object.h  data_types.h  deprecated.h  distance.h  distance_func_matrix.h  exception.h  fcl-inl.h.in  fcl.h  fcl.h.in  intersect.h  octree.h  penetration_depth.h  profile.h
include/fcl/BV/: AABB.h  BV.h  BV_node.h  OBB.h  OBBRSS.h  RSS.h  bv_utility.h  convert_bv.h  fit.h  kDOP.h  kIOS.h  utility.h
include/fcl/BVH/: BVH_front.h  BVH_internal.h  BVH_model.h  BVH_utility.h  BV_fitter.h  BV_splitter.h
include/fcl/articulated_model/: joint.h  joint_config.h  link.h  model.h  model_config.h
include/fcl/broadphase/: broadphase.h  broadphase_SSaP-inl.h  broadphase_SSaP.h  broadphase_SaP-inl.h  broadphase_SaP.h  broadphase_bruteforce-impl.h  broadphase_bruteforce-inl.h  broadphase_bruteforce.h  broadphase_collision_manager-impl.h  broadphase_collision_manager-inl.h  broadphase_collision_manager.h  broadphase_continuous_collision_manager-inl.h  broadphase_continuous_collision_manager.h  broadphase_dynamic_AABB_tree-inl.h  broadphase_dynamic_AABB_tree.h  broadphase_dynamic_AABB_tree_array-inl.h  broadphase_dynamic_AABB_tree_array.h  broadphase_interval_tree-inl.h  broadphase_interval_tree.h  broadphase_spatialhash-inl.h  broadphase_spatialhash.h  broadphase_spatialhash.hxx  default_broadphase_callbacks.h  hash.h  hierarchy_tree.h  hierarchy_tree.hxx  interval_tree.h  morton.h  simple_hash_table.h  sparse_hash_table.h  spatial_hash.h
include/fcl/ccd/: conservative_advancement.h  interval.h  interval_matrix.h  interval_vector.h  motion.h  motion_base.h  taylor_matrix.h  taylor_model.h  taylor_vector.h
include/fcl/common/: deprecated.h  exception.h  profiler.h  time.h  types.h  unused.h  visibility.h  warning.h
include/fcl/eigen/: fcl_matrix.h  taylor_operator.h
include/fcl/geometry/: collision_geometry-inl.h  collision_geometry.h  geometric_shape_to_BVH_model-inl.h  geometric_shape_to_BVH_model.h
include/fcl/knn/: greedy_kcenters.h  nearest_neighbors.h  nearest_neighbors_GNAT.h  nearest_neighbors_flann.h  nearest_neighbors_linear.h  nearest_neighbors_sqrtapprox.h
include/fcl/learning/: classifier.h
include/fcl/math/: constants.h  geometry-impl.h  geometry.h  (+24 more)
src/: CMakeLists.txt  collision.cpp  collision_data.cpp  collision_func_matrix.cpp  collision_node.cpp  continuous_collision.cpp  distance.cpp  distance_capsule_capsule.cpp  distance_func_matrix.cpp  distance_func_matrix.h  intersect.cpp  penetration_depth.cpp  profile.cpp
src/BV/: AABB.cpp  OBB.cpp  OBBRSS.cpp  RSS.cpp  kDOP.cpp  kIOS.cpp
src/BVH/: BVH_model.cpp  BVH_utility.cpp  BV_fitter.cpp  BV_splitter.cpp
src/articulated_model/: joint.cpp  joint_config.cpp  link.cpp  model.cpp  model_config.cpp
src/broadphase/: broadphase_SSaP.cpp  broadphase_SaP.cpp  broadphase_bruteforce.cpp  broadphase_collision_manager.cpp  broadphase_continuous_collision_manager.cpp  broadphase_dynamic_AABB_tree.cpp  broadphase_dynamic_AABB_tree_array.cpp  broadphase_interval_tree.cpp  broadphase_spatialhash.cpp  hierarchy_tree.cpp  interval_tree.cpp
src/ccd/: conservative_advancement.cpp  interval.cpp  interval_matrix.cpp  interval_vector.cpp  motion.cpp  taylor_matrix.cpp  taylor_model.cpp  taylor_vector.cpp
src/common/: exception.cpp  time.cpp
src/geometry/: collision_geometry.cpp
src/math/: constants.cpp  geometry.cpp  rng.cpp  sampling.cpp  transform.cpp  triangle.cpp  variance3.cpp
src/narrowphase/: collision.cpp  collision_object.cpp  collision_request.cpp  collision_result.cpp  contact.cpp  contact_point.cpp  continuous_collision.cpp  continuous_collision_object.cpp  continuous_collision_request.cpp  continuous_collision_result.cpp  cost_source.cpp  distance.cpp  distance_request.cpp  distance_result.cpp  gjk.cpp  gjk_libccd.cpp  narrowphase.cpp
src/object/: collision_object.cpp  continuous_collision_object.cpp
src/shape/: geometric_shapes.cpp  geometric_shapes_utility.cpp
src/traversal/: traversal_node_base.cpp  traversal_node_bvhs.cpp  traversal_node_setup.cpp  traversal_recurse.cpp
test/: CMakeLists.txt  eigen_matrix_compare.h  expect_throws_message.h  general_test.cpp  libsvm_classifier.h  test_fcl_auto_diff.cpp  test_fcl_box_box.cpp  test_fcl_box_half_space.cpp  test_fcl_boxmesh_boxmesh.cpp  test_fcl_broadphase.cpp  test_fcl_broadphase_collision_1.cpp  test_fcl_broadphase_collision_2.cpp  test_fcl_broadphase_distance.cpp  test_fcl_bvh_models.cpp  test_fcl_capsule_box.cpp  test_fcl_capsule_box_1.cpp  test_fcl_capsule_box_2.cpp  test_fcl_capsule_capsule.cpp  test_fcl_collision.cpp  test_fcl_constant_eps.cpp  test_fcl_convexhull_convexhull.cpp  test_fcl_coplanar_triangles.cpp  test_fcl_cylinder_half_space.cpp  test_fcl_distance.cpp  test_fcl_frontlist.cpp  test_fcl_general.cpp  test_fcl_generate_bvh_model.cpp  test_fcl_generate_bvh_model_deferred_finalize.cpp  test_fcl_generate_bvh_model_primitives.cpp  test_fcl_geometric_shapes.cpp  test_fcl_global_penetration.cpp  test_fcl_halfspace_dist.cpp  test_fcl_hungarian-inl.h  test_fcl_hungarian.h  test_fcl_interp_motion.cpp  test_fcl_math.cpp  test_fcl_math_simd.cpp  test_fcl_obb_overlap.cpp  test_fcl_octomap.cpp  test_fcl_octomap_collision.cpp  (+16 more)
test/broadphase/: CMakeLists.txt  test_broadphase_dynamic_AABB_tree.cpp
test/fcl_resources/: config.h  config.h.in
test/geometry/: CMakeLists.txt
test/gtest/: gtest-1.7.0.diff
test/libsvm/: svm.cpp  svm.h
test/math/: CMakeLists.txt
trunk/fcl/: CMakeLists.txt  Makefile  fcl.pc.in  manifest.xml  stack.xml
(+1101 files in other folders)
